tests/idris2/interactive/interactive047/expected
1/1: Building Missing (Missing.idr)
Error: foo is not covering.

Missing:3:1--3:37
 1 | import Data.Vect
 2 |
 3 | foo : {n : Nat} -> Vect n Nat -> Nat
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    foo {n = S _} _

